--- a/pages/list/list.wxml
+++ b/pages/list/list.wxml
@@ -1,4 +1,5 @@
 <!--pages/list/list.wxml-->
+<import src="../listTemplate/listTemplate.wxml"/>
 <view class="listContainer">
   <swiper circular indicator-dots indicator-color="black" indicator-active-color="skyblue">
     <swiper-item>
@@ -14,4 +15,9 @@
       <image src="/images/detail/carousel/04.jpg"></image>
     </swiper-item>
   </swiper>
+  <view wx:for="{{listArr}}" wx:for-index="idx" wx:key="{{idx}}">
+    <view bindtap="toDetail" data-index="{{idx}}">
+      <template is="listTmp" data="{{...item}}"/>
+    </view>
+  </view>
 </view>
